--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -64,6 +64,7 @@ The following packages will be downloaded:
     attr-2.5.1                 |       h166bdaf_1          69 KB  conda-forge
     brotli-1.0.9               |       h166bdaf_8          18 KB  conda-forge
     brotli-bin-1.0.9           |       h166bdaf_8          20 KB  conda-forge
+    cairo-1.16.0               |    ha61ee94_1014         1.5 MB  conda-forge
     contourpy-1.0.7            |  py310hdf3cbec_0         211 KB  conda-forge
     cycler-0.11.0              |     pyhd8ed1ab_0          10 KB  conda-forge
     dbus-1.13.6                |       h5008d03_3         604 KB  conda-forge
@@ -81,9 +82,11 @@ The following packages will be downloaded:
     gettext-0.21.1             |       h27087fc_0         4.1 MB  conda-forge
     glib-2.74.1                |       h6239696_1         474 KB  conda-forge
     glib-tools-2.74.1          |       h6239696_1         107 KB  conda-forge
+    graphite2-1.3.13           |    h58526e2_1001         102 KB  conda-forge
     gst-plugins-base-1.21.3    |       h4243ec0_1         2.6 MB  conda-forge
     gstreamer-1.21.3           |       h25f0c4b_1         1.9 MB  conda-forge
     gstreamer-orc-0.4.33       |       h166bdaf_0         299 KB  conda-forge
+    harfbuzz-6.0.0             |       h8e241bc_0         1.2 MB  conda-forge
     icu-70.1                   |       h27087fc_0        13.5 MB  conda-forge
     jack-1.9.21                |       h583fa2b_2         450 KB  conda-forge
     jpeg-9e                    |       h166bdaf_2         269 KB  conda-forge
@@ -138,6 +141,7 @@ The following packages will be downloaded:
     packaging-23.0             |     pyhd8ed1ab_0          40 KB  conda-forge
     pcre2-10.40                |       hc3806b6_0         2.3 MB  conda-forge
     pillow-9.4.0               |  py310h4927cde_0        44.1 MB  conda-forge
+    pixman-0.40.0              |       h36c2ea0_0         627 KB  conda-forge
     ply-3.11                   |             py_1          44 KB  conda-forge
     pthread-stubs-0.4          |    h36c2ea0_1001           5 KB  conda-forge
     pulseaudio-16.1            |       ha8d29e2_1         1.5 MB  conda-forge
@@ -145,7 +149,7 @@ The following packages will be downloaded:
     pyqt-5.15.7                |  py310h29803b5_2         6.2 MB  conda-forge
     pyqt5-sip-12.11.0          |  py310hd8f1fbe_2          86 KB  conda-forge
     python-dateutil-2.8.2      |     pyhd8ed1ab_0         240 KB  conda-forge
-    qt-main-5.15.6             |       hf6cd601_5        52.3 MB  conda-forge
+    qt-main-5.15.6             |       h602db52_6        52.2 MB  conda-forge
     sip-6.7.5                  |  py310hd8f1fbe_0         467 KB  conda-forge
     six-1.16.0                 |     pyh6c4a22f_0          14 KB  conda-forge
     toml-0.10.2                |     pyhd8ed1ab_0          18 KB  conda-forge
@@ -156,10 +160,20 @@ The following packages will be downloaded:
     xcb-util-keysyms-0.4.0     |       h166bdaf_0          12 KB  conda-forge
     xcb-util-renderutil-0.3.9  |       h166bdaf_0          15 KB  conda-forge
     xcb-util-wm-0.4.1          |       h166bdaf_0          55 KB  conda-forge
+    xorg-kbproto-1.0.7         |    h7f98852_1002          27 KB  conda-forge
+    xorg-libice-1.0.10         |       h7f98852_0          58 KB  conda-forge
+    xorg-libsm-1.2.3           |    hd9c2040_1000          26 KB  conda-forge
+    xorg-libx11-1.7.2          |       h7f98852_0         941 KB  conda-forge
     xorg-libxau-1.0.9          |       h7f98852_0          13 KB  conda-forge
     xorg-libxdmcp-1.1.3        |       h7f98852_0          19 KB  conda-forge
+    xorg-libxext-1.3.4         |       h7f98852_1          54 KB  conda-forge
+    xorg-libxrender-0.9.10     |    h7f98852_1003          32 KB  conda-forge
+    xorg-renderproto-0.11.1    |    h7f98852_1002           9 KB  conda-forge
+    xorg-xextproto-7.3.0       |    h7f98852_1002          28 KB  conda-forge
+    xorg-xproto-7.0.31         |    h7f98852_1007          73 KB  conda-forge
+    zlib-1.2.13                |       h166bdaf_4          92 KB  conda-forge
     ------------------------------------------------------------
-                                           Total:       240.1 MB
+                                           Total:       244.7 MB
 
 The following NEW packages will be INSTALLED:
 
@@ -167,6 +181,7 @@ The following NEW packages will be INSTALLED:
   attr               conda-forge/linux-64::attr-2.5.1-h166bdaf_1
   brotli             conda-forge/linux-64::brotli-1.0.9-h166bdaf_8
   brotli-bin         conda-forge/linux-64::brotli-bin-1.0.9-h166bdaf_8
+  cairo              conda-forge/linux-64::cairo-1.16.0-ha61ee94_1014
   contourpy          conda-forge/linux-64::contourpy-1.0.7-py310hdf3cbec_0
   cycler             conda-forge/noarch::cycler-0.11.0-pyhd8ed1ab_0
   dbus               conda-forge/linux-64::dbus-1.13.6-h5008d03_3
@@ -184,9 +199,11 @@ The following NEW packages will be INSTALLED:
   gettext            conda-forge/linux-64::gettext-0.21.1-h27087fc_0
   glib               conda-forge/linux-64::glib-2.74.1-h6239696_1
   glib-tools         conda-forge/linux-64::glib-tools-2.74.1-h6239696_1
+  graphite2          conda-forge/linux-64::graphite2-1.3.13-h58526e2_1001
   gst-plugins-base   conda-forge/linux-64::gst-plugins-base-1.21.3-h4243ec0_1
   gstreamer          conda-forge/linux-64::gstreamer-1.21.3-h25f0c4b_1
   gstreamer-orc      conda-forge/linux-64::gstreamer-orc-0.4.33-h166bdaf_0
+  harfbuzz           conda-forge/linux-64::harfbuzz-6.0.0-h8e241bc_0
   icu                conda-forge/linux-64::icu-70.1-h27087fc_0
   jack               conda-forge/linux-64::jack-1.9.21-h583fa2b_2
   jpeg               conda-forge/linux-64::jpeg-9e-h166bdaf_2
@@ -241,6 +258,7 @@ The following NEW packages will be INSTALLED:
   packaging          conda-forge/noarch::packaging-23.0-pyhd8ed1ab_0
   pcre2              conda-forge/linux-64::pcre2-10.40-hc3806b6_0
   pillow             conda-forge/linux-64::pillow-9.4.0-py310h4927cde_0
+  pixman             conda-forge/linux-64::pixman-0.40.0-h36c2ea0_0
   ply                conda-forge/noarch::ply-3.11-py_1
   pthread-stubs      conda-forge/linux-64::pthread-stubs-0.4-h36c2ea0_1001
   pulseaudio         conda-forge/linux-64::pulseaudio-16.1-ha8d29e2_1
@@ -248,7 +266,7 @@ The following NEW packages will be INSTALLED:
   pyqt               conda-forge/linux-64::pyqt-5.15.7-py310h29803b5_2
   pyqt5-sip          conda-forge/linux-64::pyqt5-sip-12.11.0-py310hd8f1fbe_2
   python-dateutil    conda-forge/noarch::python-dateutil-2.8.2-pyhd8ed1ab_0
-  qt-main            conda-forge/linux-64::qt-main-5.15.6-hf6cd601_5
+  qt-main            conda-forge/linux-64::qt-main-5.15.6-h602db52_6
   sip                conda-forge/linux-64::sip-6.7.5-py310hd8f1fbe_0
   six                conda-forge/noarch::six-1.16.0-pyh6c4a22f_0
   toml               conda-forge/noarch::toml-0.10.2-pyhd8ed1ab_0
@@ -259,8 +277,18 @@ The following NEW packages will be INSTALLED:
   xcb-util-keysyms   conda-forge/linux-64::xcb-util-keysyms-0.4.0-h166bdaf_0
   xcb-util-renderut~ conda-forge/linux-64::xcb-util-renderutil-0.3.9-h166bdaf_0
   xcb-util-wm        conda-forge/linux-64::xcb-util-wm-0.4.1-h166bdaf_0
+  xorg-kbproto       conda-forge/linux-64::xorg-kbproto-1.0.7-h7f98852_1002
+  xorg-libice        conda-forge/linux-64::xorg-libice-1.0.10-h7f98852_0
+  xorg-libsm         conda-forge/linux-64::xorg-libsm-1.2.3-hd9c2040_1000
+  xorg-libx11        conda-forge/linux-64::xorg-libx11-1.7.2-h7f98852_0
   xorg-libxau        conda-forge/linux-64::xorg-libxau-1.0.9-h7f98852_0
   xorg-libxdmcp      conda-forge/linux-64::xorg-libxdmcp-1.1.3-h7f98852_0
+  xorg-libxext       conda-forge/linux-64::xorg-libxext-1.3.4-h7f98852_1
+  xorg-libxrender    conda-forge/linux-64::xorg-libxrender-0.9.10-h7f98852_1003
+  xorg-renderproto   conda-forge/linux-64::xorg-renderproto-0.11.1-h7f98852_1002
+  xorg-xextproto     conda-forge/linux-64::xorg-xextproto-7.3.0-h7f98852_1002
+  xorg-xproto        conda-forge/linux-64::xorg-xproto-7.0.31-h7f98852_1007
+  zlib               conda-forge/linux-64::zlib-1.2.13-h166bdaf_4
 
 
 Preparing transaction: ...working... done
@@ -309,4 +337,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Sunday 22 January 2023 18:16">Sunday 22 January 2023</span>. Using Julia version 1.8.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Monday 23 January 2023 00:46">Monday 23 January 2023</span>. Using Julia version 1.8.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
